GNOME Bugzilla – Bug 700989
connection editor: disconnect signals from NMClient
Last modified: 2013-09-07 22:11:23 UTC
The connection editor connects to permission-changed on its NMClient, but doesn't disconnect from that signal when it drops the NMClient reference in finalize. It should. This may be the cause for https://bugzilla.redhat.com/attachment.cgi?id=735397
Created attachment 254352 [details] [review] network: Disconnect from signal on finalize The connection editor connects to permission-changed on its NMClient, but didn't disconnect from that signal when dropping the NMClient reference in finalize.
Review of attachment 254352 [details] [review]: Looks good. For 3.8 too
Pushed to master and gnome-3-8 Attachment 254352 [details] pushed as 67f959b - network: Disconnect from signal on finalize