network: Disconnect from signal on finalize

The connection editor connects to permission-changed on its NMClient,
but didn't disconnect from that signal when dropping the NMClient
reference in finalize.

https://bugzilla.gnome.org/show_bug.cgi?id=700989